# Kafka-TechHub

./: README.md
kafka-consumer-rust/: Cargo.toml  README.md
kafka-consumer-rust/src/: config.rs  consumer.rs  main.rs  models.rs
kafka-producer-rust/: Cargo.toml  README.md
kafka-producer-rust/src/: config.rs  main.rs  model.rs  producer.rs
kafka-producer-rust/src/resource/: application.config
