[package]
name = "kafka-producer-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = "0.36.2"
serde = { version = "1.0.197", features = ["derive"] }
lazy_static = "1.4.0"
hocon = "0.9.0"
log = "0.4.21"
env_logger = "0.11.3"
serde_json = "1.0.114"